# ProtoBind-Diff

./: LICENSE  README.md  pyproject.toml  readme.md
configs/: masked_diffusion.yaml
data/actives_bindingdb_cl/: CCR9.csv  ESR1.csv  FTO.csv  GRIK1.csv  HCRTR1.csv  IDH1.csv  JAK1.csv  KDM1A.csv  NR4A1.csv  P2RX3.csv  RIOK1.csv  SPIN1.csv
data/bindingdb/: boltz_CCR9.csv  boltz_ESR1.csv  boltz_FTO.csv  boltz_GRIK1.csv  boltz_HCRTR1.csv  boltz_IDH1.csv  boltz_JAK1.csv  boltz_KDM1A.csv  boltz_NR4A1.csv  boltz_P2RX3.csv  boltz_RIOK1.csv  boltz_SPIN1.csv  generated_P2RX3.csv
data/bindingdb_active/: boltz_CCR9.csv  boltz_ESR1.csv  boltz_FTO.csv  boltz_GRIK1.csv  boltz_HCRTR1.csv  boltz_IDH1.csv  boltz_JAK1.csv  boltz_KDM1A.csv  boltz_NR4A1.csv  boltz_P2RX3.csv  boltz_RIOK1.csv  boltz_SPIN1.csv  generated_CCR9.csv  generated_ESR1.csv  generated_FTO.csv  generated_GRIK1.csv  generated_HCRTR1.csv  generated_IDH1.csv  generated_JAK1.csv  generated_KDM1A.csv  generated_NR4A1.csv  generated_P2RX3.csv  generated_RIOK1.csv  generated_SPIN1.csv
data/fasta/: CCR9.fasta  ESR1.fasta  FTO.fasta  GRIK1.fasta  IDH1.fasta  JAK1.fasta  KDM1A.fasta  NR4A1.fasta  P2RX3.fasta  RIOK1.fasta  SPIN1.fasta
data/pocket2mol/: boltz_CCR9.csv  boltz_ESR1.csv  boltz_FTO.csv  (+21 more)
notebooks/: UMAP.ipynb  allign.ipynb  att_head_roc_auc.ipynb  boltz_results.ipynb  docking_vina.ipynb  molecular_properties.ipynb
protobind_diff/: data_loader.py  decoder_rope.py  esm_inference.py  model.py  noise_schedule.py  parsers.py  train.py
results/: REAMDE.txt
scripts/: download.py  esm_and_sim_matrix.py
(+279 files in other folders)
